5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1582_1332.log
== SUBMITION (2019-03-14 13:02:05) 
-- CODE:
aresta =
area = 
 
print(round(A
=
3
2
√
3
a
2a, 4))
-- EXECUTION TIME:
0.23544
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 13:02:06) 
-- CODE:
aresta =
area = 
 
print(round(A
=
3
2
√
3
a
2a, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:00:25) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4)
-- EXECUTION TIME:
0.147237
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 5
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:00:43) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.140657
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:15:36) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:16:14) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.157678
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
